Correction veille + amélioration bandeau info + amélioration gestion des objets et des timeline / attetion : téléchargement désimplementé temporairement